# applied-ml-projects

./: .gitignore  README.md  requirements.txt
data/: README.md
ml-boston-climate-modeler/: 4344212.csv  Makefile  README.md  pyproject.toml  requirements.txt
ml-boston-climate-modeler/notebooks/: climate_exploration.ipynb
ml-boston-climate-modeler/reports/: metrics_tf.json  sequence_scaler.json  weights_lstm.json  weights_transformer.json
ml-boston-climate-modeler/scripts/: train_tf_models.py
ml-boston-climate-modeler/src/climate_modeling/: __init__.py  data.py  sequence_dataset.py  tf_cells.py  tf_models.py  tf_trainer.py
ml-boston-climate-modeler/tests/: test_sequence_dataset.py  test_tf_models.py
ml-llm-alignment-fine-tuning/: README.md
ml-movie-recommender/: README.md
ml-recyclable-material-classifier-vgg16/: README.md
ml-satellite-image-classifier/: README.md
ml-social-network-predictor/: README.md
ml-wearable-motion-classifier/: README.md
models/: README.md
notebooks/: 01_data_loading_memory_vs_generator.ipynb  02_keras_data_pipeline.ipynb  03_pytorch_data_pipeline.ipynb  04_keras_cnn_classifier.ipynb  05_pytorch_cnn_classifier.ipynb  06_keras_vs_pytorch_cnn_comparison.ipynb  07_keras_cnn_vit_hybrid.ipynb  08_pytorch_cnn_vit_hybrid.ipynb  09_final_cnn_vit_evaluation.ipynb  README.md
reports/: results_summary.md
scripts/: 01_data_loading_memory_vs_generator.py  02_keras_data_pipeline.py  03_pytorch_data_pipeline.py  04_keras_cnn_classifier.py  05_pytorch_cnn_classifier.py  06_keras_vs_pytorch_cnn_comparison.py  07_keras_cnn_vit_hybrid.py  (+3 more)
(+5 files in other folders)
